[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calculate-server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.12.0"

[build-dependencies]
tonic-build = "0.10.0"
